--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,9 +51,13 @@
     ]
   },
   "devDependencies": {
+    "@types/enzyme": "^3.10.9",
     "@types/react-router-dom": "^5.1.8",
+    "@types/react-test-renderer": "^17.0.1",
     "@typescript-eslint/eslint-plugin": "^4.28.3",
     "@typescript-eslint/parser": "^4.28.3",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
+    "enzyme": "^3.11.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-config-prettier": "^8.3.0",
@@ -61,6 +65,8 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
-    "prettier": "^2.3.2"
+    "jest-extended": "^0.11.5",
+    "prettier": "^2.3.2",
+    "react-test-renderer": "^17.0.2"
   }
 }
