--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,8 @@
     "express-validator": "^6.12.1",
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "mysql2": "^2.3.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
