--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,11 +20,24 @@ stages: # List of stages for jobs, and their order of execution
 test-job: # This job runs in the build stage, which runs first.
   stage: test
   script:
-    - echo "Testing the React..."
+    - echo "Unit testing the React..."
     - cd frontend
     - yarn
     - yarn test
-    - echo "Test complete."
+    - echo "Unit test complete."
+  only:
+    - pushes
+
+test-job-cy:
+  image: cypress/browsers:node12.14.1-chrome85-ff81
+  stage: test
+  script:
+    # install dependencies
+    - npm ci
+    # start the server in the background
+    - npm run start:ci &
+    # run Cypress tests
+    - npx cypress run --browser chrome
   only:
     - pushes
   #tags:
