--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@cypress/instrument-cra": "^1.4.0",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
@@ -20,6 +19,7 @@
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
     "axios": "^0.21.1",
+    "cross-env": "^7.0.3",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -30,11 +30,14 @@
   },
   "scripts": {
     "ci": "yarn install --frozen-lockfile",
-    "start": "react-scripts -r @cypress/instrument-cra start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "cypress-test": "cypress open",
+    "cypress:start:app": "cross-env BROWSER=none react-scripts -r @cypress/instrument-cra start",
+    "cypress:start:wait": "start-server-and-test cypress:start:app http://localhost:3000",
+    "cypress:open": "npm run cypress:start:wait -- \"cypress open\"",
+    "cypress:run": "npm run cypress:start:wait -- \"cypress run\"",
     "test-coverage": "react-scripts test --coverage"
   },
   "eslintConfig": {
@@ -57,6 +60,7 @@
   },
   "devDependencies": {
     "@cypress/code-coverage": "^3.9.10",
+    "@cypress/instrument-cra": "^1.4.0",
     "@cypress/react": "^5.9.4",
     "@cypress/webpack-dev-server": "^1.4.0",
     "@types/enzyme": "^3.10.9",
@@ -78,6 +82,7 @@
     "jest-extended": "^0.11.5",
     "prettier": "^2.3.2",
     "react-test-renderer": "^17.0.2",
+    "start-server-and-test": "^1.13.1",
     "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1"
   }
