--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,7 @@
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
-    "mysql2": "^2.3.0"
+    "sequelize": "^6.6.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
