--- a/backend/package.json
+++ b/backend/package.json
@@ -2,11 +2,11 @@
   "name": "my-recipe-note",
   "version": "1.0.0",
   "description": "my-recipe-note backend",
-  "main": "index.js",
+  "main": "app-route.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app-route"
+    "start": "NODE_ENV=development nodemon app-route"
   },
   "author": "Park Yeonha",
   "license": "ISC",
@@ -22,6 +22,8 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.0",
+    "pg": "^8.7.1",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.6.5"
   },
   "devDependencies": {
