--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,9 @@
     "@types/react-dom": "^17.0.9",
     "axios": "^0.21.1",
     "cross-env": "^7.0.3",
+    "global": "^4.4.0",
+    "netlify": "^8.0.0",
+    "netlify-cli": "^6.8.8",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -32,7 +35,7 @@
   "scripts": {
     "ci": "yarn install --frozen-lockfile",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "CI=false && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "cypress:start:app": "cross-env BROWSER=none react-scripts -r @cypress/instrument-cra start",
